// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge does not render with no notifications 1`] = `
"<NotificationBadge number={0}>
  <Blueprint3.Tag intent=\\"danger\\" round={true} large={[undefined]}>
    <span className=\\"bp3-tag bp3-intent-danger bp3-round\\" tabIndex={[undefined]}>
      <Blueprint3.Icon icon={[undefined]} />
      <Blueprint3.Text className=\\"bp3-fill\\" ellipsize={true} tagName=\\"span\\">
        <span className=\\"bp3-text-overflow-ellipsis bp3-fill\\" title={[undefined]}>
          0
        </span>
      </Blueprint3.Text>
      <Blueprint3.Icon icon={[undefined]} />
    </span>
  </Blueprint3.Tag>
</NotificationBadge>"
`;

exports[`Badge renders properly for avengers 1`] = `
"<NotificationBadge number={1}>
  <Blueprint3.Tag intent=\\"danger\\" round={true} large={[undefined]}>
    <span className=\\"bp3-tag bp3-intent-danger bp3-round\\" tabIndex={[undefined]}>
      <Blueprint3.Icon icon={[undefined]} />
      <Blueprint3.Text className=\\"bp3-fill\\" ellipsize={true} tagName=\\"span\\">
        <span className=\\"bp3-text-overflow-ellipsis bp3-fill\\" title={[undefined]}>
          1
        </span>
      </Blueprint3.Text>
      <Blueprint3.Icon icon={[undefined]} />
    </span>
  </Blueprint3.Tag>
</NotificationBadge>"
`;

exports[`Badge renders properly for students 1`] = `
"<NotificationBadge number={4}>
  <Blueprint3.Tag intent=\\"danger\\" round={true} large={[undefined]}>
    <span className=\\"bp3-tag bp3-intent-danger bp3-round\\" tabIndex={[undefined]}>
      <Blueprint3.Icon icon={[undefined]} />
      <Blueprint3.Text className=\\"bp3-fill\\" ellipsize={true} tagName=\\"span\\">
        <span className=\\"bp3-text-overflow-ellipsis bp3-fill\\" title={[undefined]}>
          4
        </span>
      </Blueprint3.Text>
      <Blueprint3.Icon icon={[undefined]} />
    </span>
  </Blueprint3.Tag>
</NotificationBadge>"
`;
